# lvgl_simulator

./: .gitmodules  CMakeLists.txt  lv_conf.h  lv_drv_conf.h  main.cc  mtrace.c  mtrace.h
cmake/: extensions.cmake
sdl/: CMakeLists.txt
